# KeepStock

./: .gitignore  LICENSE  Pipfile  README.md  buildozer.spec  main.py  pyproject.toml  requirements.txt
libs/garden/garden.zbarcam/: __init__.py
libs/garden/garden.zbarcam/zbarcam/: zbarcam.py
res/kv/: notify.kv  splash.kv  widget.kv
src/: __init__.py  __main__.py  app.py  keepstock.kv  main.py  manager.py  menu.py  meta.py  notify.py  overview.py  path.py  splash.py  widget.py
src/page/: __init__.py  inventory.py  manage.py  page.kv  page.py  splash.py  view.py
src/page/kv/: edit.kv  in.kv  inventory.kv  menu.kv  out.kv  page.kv  scan.kv  splash.kv  view.kv
src/pages/: manager.py  menu.py  splash.py
src/widget/: __init__.py  base.py  camera.py  form.py  navigate.py  notify.py  widget.kv
src/widget/kv/: base.kv  form.kv  navigate.kv  notify.kv
