[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Noah <noahcorona231@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
cython = "^0.29.6"
kivy = "^1.10"

[tool.poetry.dev-dependencies]
buildozer = "^0.39.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
start = 'main:start'
android = 'main:android'
