[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Noah <noahcorona231@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
cython = "^0.29.6"
kivy = "^1.10"
opencv-python = "^4.0"
kivy-garden = "^0.1.4"
requests = "^2.21"
pillow = "^6.0"
pyzbar = "^0.1.8"

[tool.poetry.dev-dependencies]
buildozer = "^0.39.0"
flake8 = "^3.7"

[tool.poetry.scripts]
start = 'main:start'
android = 'main:android'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

